[project]
name = "streamlit-census"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "adjusttext==0.8",
    "affine==2.4.0",
    "alabaster==0.7.16",
    "altair==5.2.0",
    "appnope==0.1.4",
    "asttokens==2.4.1",
    "attrs==23.2.0",
    "babel==2.14.0",
    "beautifulsoup4==4.12.3",
    "bleach==6.1.0",
    "blinker==1.7.0",
    "branca==0.7.1",
    "cachetools==5.3.2",
    "censusdis==1.1.1",
    "certifi==2024.2.2",
    "charset-normalizer==3.3.2",
    "click==8.1.7",
    "click-plugins==1.1.1",
    "cligj==0.7.2",
    "comm==0.2.1",
    "contextily==1.5.0",
    "contourpy==1.2.0",
    "cycler==0.12.1",
    "debugpy==1.8.1",
    "decorator==5.1.1",
    "defusedxml==0.7.1",
    "divintseg==0.6.1",
    "docutils==0.20.1",
    "executing==2.0.1",
    "fastjsonschema==2.19.1",
    "fiona==1.9.5",
    "flake8==7.0.0",
    "flake8-html==0.4.3",
    "folium==0.15.1",
    "fonttools==4.49.0",
    "genbadge==1.1.1",
    "geographiclib==2.0",
    "geopandas==0.14.3",
    "geopy==2.4.1",
    "gitdb==4.0.11",
    "gitpython==3.1.42",
    "haversine==2.8.1",
    "idna==3.6",
    "imagesize==1.4.1",
    "importlib-metadata==7.0.1",
    "ipykernel==6.29.2",
    "ipyleaflet==0.18.2",
    "ipython==8.18.1",
    "ipywidgets==8.1.2",
    "jedi==0.19.1",
    "jinja2==3.1.3",
    "joblib==1.3.2",
    "jsonschema==4.21.1",
    "jsonschema-specifications==2023.12.1",
    "jupyter-client==8.6.0",
    "jupyter-core==5.7.1",
    "jupyterlab-pygments==0.3.0",
    "jupyterlab-widgets==3.0.10",
    "kiwisolver==1.4.5",
    "logargparser==0.1.1",
    "mapclassify==2.6.1",
    "markdown-it-py==3.0.0",
    "markupsafe==2.1.5",
    "matplotlib==3.8.3",
    "matplotlib-inline==0.1.6",
    "mccabe==0.7.0",
    "mdurl==0.1.2",
    "mercantile==1.2.1",
    "mistune==3.0.2",
    "nbclient==0.9.0",
    "nbconvert==7.16.1",
    "nbformat==5.9.2",
    "nbsphinx==0.9.3",
    "nest-asyncio==1.6.0",
    "networkx==3.2.1",
    "numpy==1.26.4",
    "packaging==23.2",
    "pandas==2.2.0",
    "pandocfilters==1.5.1",
    "parso==0.8.3",
    "pexpect==4.9.0",
    "pillow==10.2.0",
    "platformdirs==4.2.0",
    "plotly==5.19.0",
    "prompt-toolkit==3.0.43",
    "protobuf==4.25.3",
    "psutil==5.9.8",
    "ptyprocess==0.7.0",
    "pure-eval==0.2.2",
    "pyarrow==15.0.0",
    "pycodestyle==2.11.1",
    "pydeck==0.8.1b0",
    "pyflakes==3.2.0",
    "pygments==2.17.2",
    "pyparsing==3.1.1",
    "pyproj==3.6.1",
    "python-dateutil==2.8.2",
    "pytz==2024.1",
    "pyyaml==6.0.1",
    "pyzmq==25.1.2",
    "rasterio==1.3.9",
    "referencing==0.33.0",
    "requests==2.31.0",
    "rich==13.7.0",
    "rpds-py==0.18.0",
    "rtree==1.2.0",
    "scikit-learn==1.4.1.post1",
    "scipy==1.12.0",
    "seaborn==0.13.2",
    "shapely==2.0.3",
    "six==1.16.0",
    "smmap==5.0.1",
    "snowballstemmer==2.2.0",
    "snuggs==1.4.7",
    "soupsieve==2.5",
    "sphinx==7.2.6",
    "sphinxcontrib-applehelp==1.0.8",
    "sphinxcontrib-devhelp==1.0.6",
    "sphinxcontrib-htmlhelp==2.0.5",
    "sphinxcontrib-jsmath==1.0.1",
    "sphinxcontrib-qthelp==1.0.7",
    "sphinxcontrib-serializinghtml==1.1.10",
    "stack-data==0.6.3",
    "streamlit==1.31.1",
    "tenacity==8.2.3",
    "threadpoolctl==3.3.0",
    "tinycss2==1.2.1",
    "toml==0.10.2",
    "toolz==0.12.1",
    "tornado==6.4",
    "traitlets==5.14.1",
    "traittypes==0.2.1",
    "typing-extensions==4.9.0",
    "tzdata==2024.1",
    "tzlocal==5.2",
    "urllib3==2.2.1",
    "usingversion==0.1.2",
    "validators==0.22.0",
    "wcwidth==0.2.13",
    "webencodings==0.5.1",
    "widgetsnbextension==4.0.10",
    "xyzservices==2023.10.1",
    "zipp==3.17.0",
]
