[project]
name = "streamlit-census"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "black[jupyter]>=25.1.0",
    "censusdis>=1.4.0",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.3",
    "numpy>=2.2.6",
    "pandas>=2.2.3",
    "plotly>=6.1.2",
    "seaborn>=0.13.2",
    "streamlit>=1.45.1",
]
